--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "@chakra-ui/react": "^1.4.1",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
+    "date-fns": "^2.19.0",
     "framer-motion": "^4.0.3",
+    "gray-matter": "^4.0.2",
     "next": "^10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1"
   }
 }
